--- a/app/components/pokemon/pokemon-tpl.html
+++ b/app/components/pokemon/pokemon-tpl.html
@@ -2,21 +2,35 @@
     <div class="col-xs-12">
         <div class="row">
             <div class="col-xs-2">
-                <span ng-bind="pokemonData.name"></span>
+                <span ng-if="!editing" ng-bind="pokemonData.name"></span>
+                <input ng-if="editing"  class="form-control input-sm" ng-model="model.name">
             </div>
+
+            <div class="col-xs-1">
+                <span ng-if="!editing" ng-bind="pokemonData.type"></span>
+                <input ng-if="editing"  class="form-control input-sm" ng-model="model.type">
+            </div>
+
+            <div class="col-xs-5">
+                <span ng-if="!editing" ng-bind="pokemonData.description"></span>
+                <input ng-if="editing"  class="form-control input-sm" ng-model="model.description">
+            </div>
+
             <div class="col-xs-2">
-                <span ng-bind="pokemonData.type"></span>
+                <span ng-if="!editing" ng-bind="pokemonData.evolution"></span>
+                <input ng-if="editing"  class="form-control input-sm" ng-model="model.evolution">
             </div>
-            <div class="col-xs-4">
-                <span ng-bind="pokemonData.description"></span>
-            </div>
-            <div class="col-xs-2">
-                <span ng-bind="pokemonData.evolution"></span>
-            </div>
+
             <div class="col-xs-2 text-right">
-                <span class="glyphicon padded clickable" ng-class="{'glyphicon-star' : pokemonData.favorite, 'glyphicon-star-empty' : !pokemonData.favorite}"></span>
-                <span class="glyphicon padded clickable glyphicon-pencil"></span>
-                <span class="glyphicon padded clickable glyphicon-trash"></span>
+                <span ng-if="!editing" class="glyphicon padded clickable" ng-class="{'glyphicon-star' : pokemonData.favorite, 'glyphicon-star-empty' : !pokemonData.favorite}"></span>
+                <span ng-if="!editing" class="glyphicon glyphicon-pencil padded clickable" ng-click="ctrl.open()"></span>
+                <span ng-if="!editing" class="glyphicon glyphicon-trash padded clickable" ng-click="ctrl.delete(pokemonData.name)"></span>
+                <button ng-if="editing" class="btn btn-sm btn-success" ng-click="ctrl.modify(pokemonData)">
+                    <span class="glyphicon glyphicon-ok-circle"></span>
+                </button>
+                <button ng-if="editing" class="btn btn-sm btn-danger" ng-click="ctrl.cancel()">
+                    <span class="glyphicon glyphicon-remove-circle"></span>
+                </button>
             </div>
         </div>
     </div>
