--- a/app/components/pokemon/pokemon-tpl.html
+++ b/app/components/pokemon/pokemon-tpl.html
@@ -3,28 +3,39 @@
         <div class="row">
             <div class="col-xs-2">
                 <span ng-if="!editing" ng-bind="pokemonData.name"></span>
-                <input ng-if="editing"  class="form-control input-sm" ng-model="model.name">
+                <input ng-if="editing" class="form-control input-sm" ng-model="model.name"
+                       ng-required="validationRules.name.required" ng-minlength="{{validationRules.name.minLength}}">
             </div>
 
             <div class="col-xs-1">
-                <span ng-if="!editing" ng-bind="pokemonData.type"></span>
-                <input ng-if="editing"  class="form-control input-sm" ng-model="model.type">
+                <span ng-bind="pokemonData.types[0]"></span>
+                <span ng-if="editing" class="glyphicon glyphicon-th-list left-padded" ng-click="ctrl.selectType(0)"></span>
+            </div>
+            <div class="col-xs-1">
+                <span ng-bind="pokemonData.types[1]"></span>
+                <span ng-if="editing" class="glyphicon glyphicon-th-list left-padded" ng-click="ctrl.selectType(1)"></span>
             </div>
 
-            <div class="col-xs-5">
+            <div class="col-xs-4">
                 <span ng-if="!editing" ng-bind="pokemonData.description"></span>
-                <input ng-if="editing"  class="form-control input-sm" ng-model="model.description">
+                <input ng-if="editing" class="form-control input-sm" ng-model="model.description"
+                       ng-required="validationRules.description.required"
+                       ng-minlength="{{validationRules.description.minLength}}">
             </div>
 
             <div class="col-xs-2">
                 <span ng-if="!editing" ng-bind="pokemonData.evolution"></span>
-                <input ng-if="editing"  class="form-control input-sm" ng-model="model.evolution">
+                <input ng-if="editing" class="form-control input-sm" ng-model="model.evolution">
             </div>
 
             <div class="col-xs-2 text-right">
-                <span ng-if="!editing" class="glyphicon padded clickable" ng-class="{'glyphicon-star' : pokemonData.favorite, 'glyphicon-star-empty' : !pokemonData.favorite}" ng-click="ctrl.toggleFavorite(pokemonData)"></span>
-                <span ng-if="!editing" class="glyphicon glyphicon-pencil padded clickable" ng-click="ctrl.open()"></span>
-                <span ng-if="!editing" class="glyphicon glyphicon-trash padded clickable" ng-click="ctrl.delete(pokemonData.name)"></span>
+                <span ng-if="!editing" class="glyphicon padded clickable"
+                      ng-class="{'glyphicon-star' : pokemonData.favorite, 'glyphicon-star-empty' : !pokemonData.favorite}"
+                      ng-click="ctrl.toggleFavorite(pokemonData)"></span>
+                <span ng-if="!editing" class="glyphicon glyphicon-pencil padded clickable"
+                      ng-click="ctrl.open()"></span>
+                <span ng-if="!editing" class="glyphicon glyphicon-trash padded clickable"
+                      ng-click="ctrl.delete(pokemonData.name)"></span>
                 <button ng-if="editing" class="btn btn-sm btn-success" ng-click="ctrl.modify(pokemonData)">
                     <span class="glyphicon glyphicon-ok-circle"></span>
                 </button>
