--- a/app/components/pokemon/pokemon-tpl.html
+++ b/app/components/pokemon/pokemon-tpl.html
@@ -1,50 +1,95 @@
 <div class="row pokemon">
-    <div class="col-xs-12">
-        <div class="row">
-            <div class="col-xs-2">
-                <span ng-if="!editing" ng-bind="pokemonData.name"></span>
-                <input ng-if="editing" class="form-control input-sm" ng-model="model.name"
-                       ng-required="validationRules.name.required" ng-minlength="{{validationRules.name.minLength}}">
-            </div>
+    <form novalidate name="pokemonForm">
+        <div class="col-xs-12">
+            <div class="row">
+                <div class="col-xs-2">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <span ng-show="!editing" ng-bind="pokemonData.name"></span>
+                            <input ng-show="editing" class="form-control input-sm"
+                                   name="pokemonName"
+                                   ng-model="model.name"
+                                   ng-required="validationRules.name.required"
+                                   ng-minlength="validationRules.name.minlength"
+                                   ng-maxlength="validationRules.name.maxlength">
+                        </div>
+                    </div>
+                    <div class="row" ng-show="editing">
+                        <div class="col-xs-12">
+                            <span class="label label-danger"
+                                  ng-if="pokemonForm.pokemonName.$touched && pokemonForm.pokemonName.$error.required">El nombre es obligatorio</span>
+                            <span class="label label-danger"
+                                  ng-if="pokemonForm.pokemonName.$touched && pokemonForm.pokemonName.$error.pattern">El nombre solo puede contener caracteres alfanuméricos</span>
+                            <span class="label label-danger"
+                                  ng-if="pokemonForm.pokemonName.$touched && pokemonForm.pokemonName.$error.minlength">El nombre debe tener al menos {{validationRules.name.minlength}} caracteres</span>
+                            <span class="label label-danger"
+                                  ng-if="pokemonForm.pokemonName.$touched && pokemonForm.pokemonName.$error.maxlength">El nombre debe tener como máximo {{validationRules.name.maxlength}} caracteres</span>
+                        </div>
+                    </div>
+                </div>
 
-            <div class="col-xs-1">
-                <span ng-bind="pokemonData.types[0]" ng-class="{'clickable' : editing}" ng-click="ctrl.selectType(0)"></span>
-                <span ng-if="editing && pokemonData.types[0] && pokemonData.types[1]" class="glyphicon glyphicon-remove left-padded clickable" ng-click="ctrl.deleteType(0)"></span>
-                <span ng-if="editing && !pokemonData.types[0]" class="glyphicon glyphicon-plus-sign clickable" ng-click="ctrl.selectType(0)"></span>
-            </div>
-            <div class="col-xs-1">
-                <span ng-bind="pokemonData.types[1]" ng-class="{'clickable' : editing}" ng-click="ctrl.selectType(1)"></span>
-                <span ng-if="editing && pokemonData.types[1] && pokemonData.types[0]" class="glyphicon glyphicon-remove clickable" ng-click="ctrl.deleteType(1)"></span>
-                <span ng-if="editing && !pokemonData.types[1]" class="glyphicon glyphicon-plus-sign clickable" ng-click="ctrl.selectType(1)"></span>
-            </div>
+                <div class="col-xs-1">
+                    <span ng-bind="pokemonData.types[0]" ng-class="{'clickable' : editing}"
+                          ng-click="ctrl.selectType(0)"></span>
+                    <span ng-if="editing && pokemonData.types[0] && pokemonData.types[1]"
+                          class="glyphicon glyphicon-remove left-padded clickable" ng-click="ctrl.deleteType(0)"></span>
+                    <span ng-if="editing && !pokemonData.types[0]" class="glyphicon glyphicon-plus-sign clickable"
+                          ng-click="ctrl.selectType(0)"></span>
+                </div>
+                <div class="col-xs-1">
+                    <span ng-bind="pokemonData.types[1]" ng-class="{'clickable' : editing}"
+                          ng-click="ctrl.selectType(1)"></span>
+                    <span ng-if="editing && pokemonData.types[1] && pokemonData.types[0]"
+                          class="glyphicon glyphicon-remove clickable" ng-click="ctrl.deleteType(1)"></span>
+                    <span ng-if="editing && !pokemonData.types[1]" class="glyphicon glyphicon-plus-sign clickable"
+                          ng-click="ctrl.selectType(1)"></span>
+                </div>
 
-            <div class="col-xs-4">
-                <span ng-if="!editing" ng-bind="pokemonData.description"></span>
-                <input ng-if="editing" class="form-control input-sm" ng-model="model.description"
-                       ng-required="validationRules.description.required"
-                       ng-minlength="{{validationRules.description.minLength}}">
-            </div>
+                <div class="col-xs-4">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <span ng-show="!editing" ng-bind="pokemonData.description"></span>
+                            <input ng-show="editing" class="form-control input-sm"
+                                   name="pokemonDescription"
+                                   ng-model="model.description"
+                                   ng-required="validationRules.description.required"
+                                   ng-minlength="validationRules.description.minlength">
+                        </div>
+                    </div>
+                    <div class="row" ng-show="editing">
+                        <div class="col-xs-12">
+                            <span class="label label-danger"
+                                  ng-if="pokemonForm.pokemonDescription.$touched && pokemonForm.pokemonDescription.$error.required">Campo obligatorio</span>
+                            <span class="label label-danger"
+                                  ng-if="pokemonForm.pokemonDescription.$touched && pokemonForm.pokemonDescription.$error.pattern">Solo se permiten caracteres alfanuméricos</span>
+                            <span class="label label-danger"
+                                  ng-if="pokemonForm.pokemonDescription.$touched && pokemonForm.pokemonDescription.$error.minlength">Debe tener al menos {{validationRules.description.minlength}} caracteres</span>
+                        </div>
+                    </div>
+                </div>
 
-            <div class="col-xs-2">
-                <span ng-if="!editing" ng-bind="pokemonData.evolution"></span>
-                <input ng-if="editing" class="form-control input-sm" ng-model="model.evolution">
-            </div>
+                <div class="col-xs-2">
+                    <span ng-if="!editing" ng-bind="pokemonData.evolution"></span>
+                    <input ng-if="editing" class="form-control input-sm" ng-model="model.evolution">
+                </div>
 
-            <div class="col-xs-2 text-right">
+                <div class="col-xs-2 text-right">
                 <span ng-if="!editing" class="glyphicon padded clickable"
                       ng-class="{'glyphicon-star' : pokemonData.favorite, 'glyphicon-star-empty' : !pokemonData.favorite}"
                       ng-click="ctrl.toggleFavorite(pokemonData)"></span>
-                <span ng-if="!editing" class="glyphicon glyphicon-pencil padded clickable"
-                      ng-click="ctrl.open()"></span>
-                <span ng-if="!editing" class="glyphicon glyphicon-trash padded clickable"
-                      ng-click="ctrl.delete(pokemonData.name)"></span>
-                <button ng-if="editing" class="btn btn-sm btn-success" ng-click="ctrl.modify(pokemonData)">
-                    <span class="glyphicon glyphicon-ok-circle"></span>
-                </button>
-                <button ng-if="editing" class="btn btn-sm btn-danger" ng-click="ctrl.cancel()">
-                    <span class="glyphicon glyphicon-remove-circle"></span>
-                </button>
+                    <span ng-if="!editing" class="glyphicon glyphicon-pencil padded clickable"
+                          ng-click="ctrl.open()"></span>
+                    <span ng-if="!editing" class="glyphicon glyphicon-trash padded clickable"
+                          ng-click="ctrl.delete(pokemonData.name)"></span>
+                    <button ng-if="editing" class="btn btn-sm btn-success" ng-click="ctrl.modify(pokemonData)"
+                            ng-disabled="pokemonForm.$invalid">
+                        <span class="glyphicon glyphicon-ok-circle"></span>
+                    </button>
+                    <button ng-if="editing" class="btn btn-sm btn-danger" ng-click="ctrl.cancel()">
+                        <span class="glyphicon glyphicon-remove-circle"></span>
+                    </button>
+                </div>
             </div>
         </div>
-    </div>
+    </form>
 </div>
